# ninja

./: .gitignore  README.md  editor.py  game.py  game.spec  pyproject.toml  shaders.py
data/maps/: 0.json
scripts/: clouds.py  entities.py  particule.py  tilemap.py  utils.py
